[update] updating css and img

--- a/src/web/static/css/_aside.scss
+++ b/src/web/static/css/_aside.scss
@@ -1,7 +1,8 @@
 $aside-padding: 0;
 
 aside.global {
-  float: right;
+  /*float: right;*/
+  float: left;
   font-size: 16px;
   padding: 55px 0px 40px 0px;
   width: 288px;
