--- a/src/web/static/css/_main.scss
+++ b/src/web/static/css/_main.scss
@@ -6,7 +6,8 @@ article.main {
   border: none;
   box-sizing: border-box;
   color: #444;
-  float: left;
+  /*float: left;*/
+  float: right;
   margin: 0;
   padding-top: 0;
   width: calc(100% - 288px);
