--- a/src/web/static/css/common.css
+++ b/src/web/static/css/common.css
@@ -1934,18 +1934,55 @@ a.btn-big {
 
 /*INDEX*/
 .center {
-  text-align: center; }
+  text-align: center;
+  display: block; }
+  .center hr {
+    margin-top: 0;
+    margin-bottom: 10px; }
 
-button.overview-btn {
-  padding: 10px 60px;
+div.overview-btn {
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 250px;
   border: 1px solid #1e629e;
-  border-radius: 5px;
-  color: #fff;
+  margin: 10px;
+  padding: 10px;
+  border-radius: 4px;
+  font-size: 18px;
   background-color: #1e629e; }
+  div.overview-btn a.title {
+    color: #fff;
+    text-decoration: none; }
 
-button.overview-btn:hover {
-  background-color: #337ab7; }
+div.overview-btn:hover {
+  background-color: #fff;
+  cursor: pointer; }
+  div.overview-btn:hover a.title {
+    color: #1e629e; }
 
+/*div.overview_btn{
+    position: relative;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    width: 250px;
+    padding: 10px;
+    border: 1px solid #1e629e;
+    border-radius: 4px;
+    background-color: #1e629e;
+    a.title {
+        color: #fff; 
+        text-decoration: none;
+    }
+}
+div.overview_btn:hover {
+    a.title {
+        color: #1e629e;
+    }
+    cursor: pointer;
+    background-color: #fff;
+}*/
 #indexContents {
   margin: 0 auto;
   max-width: 1020px; }
@@ -2026,10 +2063,9 @@ div.product-box {
 
 div.product-box:hover {
   background-color: #c3c3c3;
-  cursor: pointer;
-  /*a.title {
-        color: #fff;
-    }*/ }
+  cursor: pointer; }
+  div.product-box:hover a.title:hover {
+    cursor: pointer; }
 
 img.product-logo {
   position: absolute;
