--- a/src/web/static/css/_index.scss
+++ b/src/web/static/css/_index.scss
@@ -1,3 +1,13 @@
+/*NEW*/
+.center {
+  text-align: center;
+  display: block;
+  hr {
+    margin-top: 0;
+    margin-bottom: 10px;
+  }
+}
+/*======*/
 #indexContents {
   background-color: #fff;
   margin: 0 auto;
